--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Engage</string>
+    <string name="facebook_app_id">1356409037788347</string>
+    <string name="fb_login_protocol_scheme">fb1356409037788347</string>
 </resources>
