--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">Engage</string>
     <string name="facebook_app_id">1356409037788347</string>
     <string name="fb_login_protocol_scheme">fb1356409037788347</string>
+    <string name="welcome">Welcome to Engage</string>
+    <string name="host">Host</string>
+    <string name="location">Location</string>
+    <string name="time_and_date">Time and Date</string>
+    <string name="event_description">Event Description</string>
+    <string name="number_of_people">Number of People</string>
+    <string name="people_attending">People Attending</string>
+    <string name="save">Save</string>
 </resources>
