--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="event_name">Event Name</string>
     <string name="map">Map</string>
     <string name="title_activity_maps">Map</string>
+    <string name="cancel">Cancel</string>
 </resources>
