--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,7 @@
     <string name ="miles_10">10mi</string>
     <string name = "miles_15">15mi</string>
     <string name = "custom_miles">Custom</string>
+    <string name="open_drawer">openDrawer</string>
+    <string name="close_drawer">closeDrawer</string>
 </resources>
 
