--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="drawer_close">Close navigation drawer</string>
     <string name="cancel">Cancel</string>
     <string name="event_info">Event Info</string>
-    <string name="issues">Focus Issues</string>
+    <string name="issues">Global Issues</string>
     <string name="launch_google_maps">Launch Google Maps</string>
     <string name="_0_min">0 min</string>
     <string name="_0_km">0 km</string>
